fix: spacing

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -196,7 +196,7 @@ strong {
 }
 
 .main-content {
-  min-height: calc(100vh - 130px);
+  min-height: calc(100vh - 100px);
 }
 
 .content-wrapper {
